--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
     <link rel="stylesheet" href="styles/max_width_500.css" />
   </head>
   <body>
-    <aside class="menu">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke-width="1"
-        stroke="currentColor"
-        class="w-6 h-6"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
-        />
-      </svg>
-      <div class="container_link">
-        <a id="addtuto">Ajouter un tuto</a>
-      </div>
-    </aside>
     <header>
+      <aside class="menu">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1"
+          stroke="currentColor"
+          class="w-6 h-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+          />
+        </svg>
+        <div class="container_link">
+          <a id="addtuto">Ajouter un tuto</a>
+        </div>
+      </aside>
       <div class="container_header">
         <div class="title">
-          <h1>Tutoriels</h1>
+          <h1>Quick Tutoriels</h1>
         </div>
         <div class="container_download">
           <svg
@@ -70,74 +70,80 @@
         </div>
       </form>
     </div>
-    <div class="container"></div>
-
-    <div class="container_webserver">
-    <div class="container_webserver_tuto">
+    <div class="container">
+      <h2>Divers</h2>
+      <div class="container_divers">
+      </div>
       <h2>Installation d'un server Web sur VPS</h2>
-      <div class="container_video">
-        <h2 class="video_title">Commande du VPS</h2>
-        <video width="320" height="240" controls="">
-          <source
-            src="http://51.178.81.215/tuto_studi/uploads/Commande du VPS.mp4"
-            type="video/mp4"
-          />
-        </video>
-      </div>
-      <div class="container_video">
-        <h2 class="video_title">Se connecter au VPS</h2>
-        <video width="320" height="240" controls="">
-          <source
-            src="http://51.178.81.215/tuto_studi/uploads/Se connecter au VPS.mp4"
-            type="video/mp4"
-          />
-        </video>
-      </div>
-      <div class="container_video">
-        <h2 class="video_title">Installation server</h2>
-        <video width="320" height="240" controls="">
-          <source
-            src="http://51.178.81.215/tuto_studi/uploads/Installation server.mp4"
-            type="video/mp4"
-          />
-        </video>
+      <div class="container_webserver">
+        <div class="container_webserver_tuto">
+          <div class="container_video">
+            <h2 class="video_title">Commande du VPS</h2>
+            <video width="320" height="240" controls="">
+              <source
+                src="http://51.178.81.215/tuto_studi/uploads/Commande du VPS.mp4"
+                type="video/mp4"
+              />
+            </video>
+          </div>
+          <div class="container_video">
+            <h2 class="video_title">Se connecter au VPS</h2>
+            <video width="320" height="240" controls="">
+              <source
+                src="http://51.178.81.215/tuto_studi/uploads/Se connecter au VPS.mp4"
+                type="video/mp4"
+              />
+            </video>
+          </div>
+          <div class="container_video">
+            <h2 class="video_title">Installation server</h2>
+            <video width="320" height="240" controls="">
+              <source
+                src="http://51.178.81.215/tuto_studi/uploads/Installation server.mp4"
+                type="video/mp4"
+              />
+            </video>
+          </div>
+        </div>
+        <div class="container_webserver_info">
+          <p>
+            A VENIR<br />
+            Exemple de mise en place d'une site HTML dans le Répertoire html<br />
+            Sécurisation en HTTPS<br />
+          </p>
+          <h2>Les commandes</h2>
+          <br />
+          <ul>
+            <li>adduser seb76370</li>
+            <li>adduser seb76370 sudo</li>
+            <li>su root ou sudo -s</li>
+            <li>apt update</li>
+            <li>apt upgrade -y</li>
+            <li>apt autoremove</li>
+            <li>apt install -y mc git curl ntp htop</li>
+            <li>reboot</li>
+            <li>whoami</li>
+            <li>apt install nginx -y</li>
+            <li>apt install mariadb-server -y</li>
+            <li>mysql_secure_installation</li>
+            <li>apt install php-fpm php-mysql -y</li>
+            <li>cd /etc/nginx/</li>
+            <li>nano nginx.conf</li>
+            <li>cd sites-availables</li>
+            <li>/etc/init.d/nginx restart</li>
+            <li>cd /var/var/html</li>
+            <li>nano info.php</li>
+            <li>
+              apt install phpmyadmin php-mbstring php-zip php-gd php-json
+              php-curl -y
+            </li>
+            <li>ln -s /usr/share/phpmyadmin /var/www/html/phpmyadmin</li>
+            <li>chmod 775 -R /usr/share/phpmyadmin</li>
+            <li>chown root:www-data -R /usr/share/phpmyadmin</li>
+          </ul>
+        </div>
       </div>
     </div>
-      <div class="container_webserver_info">
-      <p>
-        A VENIR<br>
-        Exemple de mise en place d'une site HTML dans le Répertoire html<br>
-        Sécurisation en HTTPS<br>
-      </p>
-      <h2>Les commandes</h2>
-      <br>
-      <ul>
-        <li>adduser seb76370</li>
-        <li>adduser seb76370 sudo</li>
-        <li>su root ou sudo -s</li>
-        <li>apt update</li>
-        <li>apt upgrade -y</li>
-        <li>apt autoremove</li>
-        <li>apt install -y mc git curl ntp htop</li>
-        <li>reboot</li>
-        <li>whoami</li>
-        <li>apt install nginx -y</li>
-        <li>apt install mariadb-server -y</li>
-        <li>mysql_secure_installation</li>
-        <li>apt install php-fpm php-mysql -y</li>
-        <li>cd /etc/nginx/</li>
-        <li>nano nginx.conf</li>
-        <li>cd sites-availables</li>
-        <li>/etc/init.d/nginx restart</li>
-        <li>cd /var/var/html</li>
-        <li>nano info.php</li>
-        <li>apt install phpmyadmin php-mbstring php-zip php-gd php-json php-curl -y</li>
-        <li>ln -s /usr/share/phpmyadmin /var/www/html/phpmyadmin</li>
-        <li>chmod 775 -R /usr/share/phpmyadmin</li>
-        <li>chown root:www-data -R /usr/share/phpmyadmin</li>
-      </ul>
-    </div>
-  </div>
     <script src="scripts/script.js"></script>
   </body>
 </html>
