--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tuto studi</title>
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/formulaire.css" />
+    <link rel="stylesheet" href="styles/container_divers.css" />
+    <link rel="stylesheet" href="styles/container_webserver.css" />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/max_width_500.css" />
   </head>
   <body>
+    <!-- Start header -->
     <header>
-      <aside class="menu">
+      <div class="menu">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -25,33 +31,34 @@
             d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
           />
         </svg>
-        <div class="container_link">
+        <div class="nav">
           <a id="addtuto">Ajouter un tuto</a>
         </div>
-      </aside>
-      <div class="container_header">
-        <div class="title">
-          <h1>Quick Tutoriels</h1>
-        </div>
-        <div class="container_download">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            class="w-6 h-6"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5M16.5 12L12 16.5m0 0L7.5 12m4.5 4.5V3"
-            />
-          </svg>
-          <p class="number_download">0</p>
-        </div>
+      </div>
+      <div class="title">
+        <h1>Quick Tutoriels</h1>
+      </div>
+      <div class="container_download">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-6 h-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5M16.5 12L12 16.5m0 0L7.5 12m4.5 4.5V3"
+          />
+        </svg>
+        <p class="number_download">0</p>
       </div>
     </header>
+    <!-- End header -->
+
+    <!-- Start formulaire -->
     <div class="overlay hide_form"></div>
     <div class="container_form hide_form">
       <div class="close">X</div>
@@ -70,13 +77,17 @@
         </div>
       </form>
     </div>
-    <div class="container">
-      <h2>Divers</h2>
-      <div class="container_divers">
-      </div>
+    <!-- End formulaire -->
+
+    <!-- start container divers (file upload are in this container ) -->
+    <h2>Divers</h2>
+    <div class="container_divers"></div>
+    <!-- end container divers -->
+
+    <!-- Start container web server (fixe) -->
       <h2>Installation d'un server Web sur VPS</h2>
       <div class="container_webserver">
-        <div class="container_webserver_tuto">
+      <div class="container_webserver_tuto">
           <div class="container_video">
             <h2 class="video_title">Commande du VPS</h2>
             <video width="320" height="240" controls="">
@@ -143,7 +154,8 @@
           </ul>
         </div>
       </div>
-    </div>
+    <!-- End container web server (fixe) -->
+
     <script src="scripts/script.js"></script>
   </body>
 </html>
