replace ip to dns

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <h2 class="video_title">Commande du VPS</h2>
           <video width="320" height="240" controls="">
             <source
-              src="http://51.178.81.215/tuto_studi/uploads/Commande du VPS.mp4"
+              src="https://dev-passion76.fr/tuto_studi/uploads/Commande du VPS.mp4"
               type="video/mp4"
             />
           </video>
@@ -103,7 +103,7 @@
           <h2 class="video_title">Se connecter au VPS</h2>
           <video width="320" height="240" controls="">
             <source
-              src="http://51.178.81.215/tuto_studi/uploads/Se connecter au VPS.mp4"
+              src="https://dev-passion76.fr/tuto_studi/uploads/Se connecter au VPS.mp4"
               type="video/mp4"
             />
           </video>
@@ -112,7 +112,7 @@
           <h2 class="video_title">Installation server</h2>
           <video width="320" height="240" controls="">
             <source
-              src="http://51.178.81.215/tuto_studi/uploads/Installation server.mp4"
+              src="https://dev-passion76.fr/tuto_studi/uploads/Installation server.mp4"
               type="video/mp4"
             />
           </video>
